--- a/FitStudioUI/src/app/authentication/login/login.component.html
+++ b/FitStudioUI/src/app/authentication/login/login.component.html
@@ -2,7 +2,7 @@
     <a routerLink="/home"><mat-icon class="backIcon">keyboard_arrow_left</mat-icon></a>
     <div class="centered">
 <form style="box-sizing: unset!important;" autocomplete="off">
-    <img src="../../../assets/img/fitStudioGreen.png" class="logo"> 
+  <img src="../../../assets/img/fitStudio.png" class="logoLogin"> 
 <h2 class="registerText">Login</h2>
 
 
@@ -36,7 +36,7 @@
           <br>
           <div class="row ">
             <!-- Submit button -->
-            <button value="Submit" class="btn btn-block" [disabled]="!loginForm.valid" id="registerBtn">Login</button>
+            <button value="Submit" class="btn btn-block" [disabled]="!loginForm.valid" id="loginBtn">Login</button>
           </div>
       </form>
 
@@ -59,7 +59,7 @@
     <div class="centered">
  
        
-            <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="5000">
+            <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="4000">
           
               <!-- Wrapper for slides -->
               <div class="carousel-inner">
@@ -85,6 +85,4 @@
     
 </div> 
 </div>
-
- 
 
