--- a/FitStudioUI/src/app/authentication/register/register.component.html
+++ b/FitStudioUI/src/app/authentication/register/register.component.html
@@ -1,8 +1,8 @@
-<div class="split left" id="loginForm">
+<div class="split left" id="registerForm">
     <a routerLink="/home"><mat-icon class="backIcon">keyboard_arrow_left</mat-icon></a>
     <div class="centered">
 <form style="box-sizing: unset!important;" autocomplete="off">
-    <img src="../../../assets/img/fitStudioGreen.png" class="logo"> 
+    <img src="../../../assets/img/fitStudio.png" class="logoRegister"> 
 <h2 class="registerText">Register</h2>
 
 
@@ -66,11 +66,11 @@
 </div>
 </div>
 
-<div class="split right ">
+<div class="split right">
     <div class="centered">
  
        
-            <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="5000">
+            <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="3000">
           
               <!-- Wrapper for slides -->
               <div class="carousel-inner">
