More Pages Added

--- a/FitStudioUI/src/app/basic-pages/home/home.component.html
+++ b/FitStudioUI/src/app/basic-pages/home/home.component.html
@@ -1,43 +1,4 @@
-
-
-<nav class="navbar fixed-top navbar-expand-lg ">
-
-    <img src="../../../assets/img/fitStudioText2.png" href="#" class="logo"> 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">    
-    <div class="inlineLeft">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Services</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Prices</a>
-          </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Gallery</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Trainers</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
-        </li>
-
-      </ul>
-</div>
-</div>
-<div class="inlineRight">
-        <a routerLink="/login"><button class="btn my-2 my-sm-0" type="submit">Login</button></a>
-        <a routerLink="/register">  <button class="btn my-2 my-sm-0" type="submit">Register</button></a>
-</div>
-
-  </nav>
+<app-nav-bar></app-nav-bar>
 
   <div class="header">
         <img src="../../../assets/img/img.jpg" alt="" style="width:100%;">
@@ -51,7 +12,7 @@
 
  </div>
 
- <div class="container-services">
+ <div class="container-services" id="services">
     <div class="section"> <h1 class="section-big-text">SERVICES</h1>
         <h1 class="section-title-text">SERVICES</h1>
     </div>
@@ -115,7 +76,7 @@
 </div>
 
 
-<div class="container-gallery">
+<div class="container-gallery" id="gallery">
     <div class="section"> <h1 class="section-big-text">GALLERY</h1>
         <h1 class="section-title-text">GALLERY</h1>
     </div>
@@ -172,7 +133,7 @@
 </div>
 
 
-<div class="container-map">
+<div class="container-map" id="contactUs">
     <div class="map-responsive">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1131.087094659281!2d25.60104092687822!3d45.64906026752023!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40b35b818c6b2a31%3A0xc0c8d417b1c86214!2sFaculty%20of%20Mathematics%20and%20Computer%20Sciences!5e0!3m2!1sen!2sro!4v1673121357661!5m2!1sen!2sro" width="600" height="450"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
